Prepare for publishing

--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "btc-p2p",
   "version": "0.1.0",
   "description": "Manage a network of Bitcoin peers",
+  "keywords": [
+    "p2p",
+    "network",
+    "bitcoin",
+    "peers",
+    "cryptography"
+  ],
   "main": "./lib/BTCNetwork.js",
 
   "dependencies": {
-    "crypto-p2p-manager": "0.1.x",
+    "p2p-manager": "0.1.x",
     "sha256": "0.1.x"
+  },
+
+  "repository": {
+    "url": "https://github.com/cryptocoinjs/btc-p2p",
+    "type": "git"
   },
 
   "author": "Brooks Boyd <boydb@midnightdesign.ws>"
