--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "main": "./lib/BTCNetwork.js",
   "dependencies": {
     "p2p-manager": "0.1.x",
-    "sha256": "0.1.x"
+    "crypto-hashing": "0.1.x"
+  },
+  "devDependencies": {
+    "mocha": "1.*"
   },
   "repository": {
     "url": "https://github.com/cryptocoinjs/btc-p2p",
