--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "cryptography"
   ],
   "main": "./lib/BTCNetwork.js",
+  "scripts": {
+     "test": "mocha"
+   },
+
   "dependencies": {
     "p2p-manager": "0.1.x",
     "crypto-binary": "0.1.x",
